# defold-simple-target-system

./: .gitignore  README.md  game.project  pyproject.toml  setup.cfg  setup.sh  test.sh
dsts/: dsts.editor_script
dsts/impl/: target_selector.py
dsts/py/: select_target.py
example/: develop.target  release.target
example/base_targets/: core.base_target  debug.base_target
tests/: conftest.py  test_support.py  test_target_provider.py
