[tool.poetry]
name = "dsts"
version = "0.1.1"
description = ""
authors = ["Dmitry Nevolin <merunes.goldman@yandex.ru>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"

[tool.poetry.dev-dependencies]
mypy = "*"
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
